apps/cypht/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cypht
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cypht
  template:
    metadata:
      labels:
        app: cypht
    spec:
      containers:
        - name: cypht
          image: cypht/cypht:2.11.1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: cypht-data
              mountPath: /var/lib/hm3
              subPath: cypht
            - name: cypht-tmp
              mountPath: /tmp
            - name: php-fpm-config
              mountPath: /usr/local/etc/php-fpm.d/zz-pool.conf
              subPath: zz-pool.conf
            - name: php-fpm-config
              mountPath: /usr/local/etc/php/conf.d/zz-opcache.ini
              subPath: zz-opcache.ini
      volumes:
        - name: cypht-data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: cypht-tmp
          emptyDir: {}
        - name: php-fpm-config
          configMap:
            name: cypht-php-config
