apps/cypht/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cypht-service
spec:
  selector:
    app: cypht
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
